--- a/style.css
+++ b/style.css
@@ -34,23 +34,11 @@ h4 {
   text-align: center;
 }
 
-#about {
-  padding: 20px;
-  background-color: #F2F2F2;
-  margin-bottom: 0.5rem;
-}
-
 a {
-  color: #8C8C8C;
-  font-family: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #8c8c8c;
+  font-family: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: bolder;
-}
-
-
-
-.nav-link {
-  padding-top: 0.1rem;
 }
 
 a:hover {
@@ -61,12 +49,63 @@ footer {
   text-align: center;
   color: #404040;
   padding-top: 10px;
-  padding-bottom: 10px;
+}
+
+#about {
+  padding: 20px;
+  background-color: #f2f2f2;
+  border-bottom: 0.5rem solid #0d0d0d;
+}
+
+.nav-link {
+  padding-top: 0.1rem;
+}
+
+.schedule {
+  width: 100%;
+
+  text-align: center;
+  background-color: #f2f2f2;
+  padding: 20px;
+  display: grid;
+  font-size: .7rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: 
+  "header header header"
+  "gig1 gig2 gig3"
+   ;
+}
+
+
+
+
+
+
+
+
+.schedule-header {
+  grid-area: header;
+  padding-bottom: 1rem;
+  text-align: left;
+
+}
+
+.gig1 {
+  grid-area: gig1;
+}
+
+.gig2 {grid-area: gig2;}
+
+.gig3 {
+  grid-area: gig3;
 }
 
 .contact-text {
   padding: 20px;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
+  border-bottom: 0.5rem solid #0d0d0d;
+
 }
 
 .img-small {
@@ -74,8 +113,8 @@ footer {
 }
 
 .p-2 {
-  padding-top: 0rem!important;
-  padding-bottom: 0rem!important;
+  padding-top: 0rem !important;
+  padding-bottom: 0rem !important;
 }
 
 /*
@@ -84,44 +123,64 @@ footer {
 ////////////////////////////////////////////////////////////////
 */
 
-
 @media (min-width: 1360px) {
   #container {
+    box-sizing: border-box !important;
     width: 100%;
-    display: inline-block;
+    max-width: 1600px!important;;
+    margin: auto;
+    display: grid !important;
+    grid-template-columns: 27% auto;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "header main";
+    justify-items: center;
+    justify-content: space-evenly;
     background-color: #bfbfbf;
-    border-right: 2.5rem solid ;
+    
   }
 
+  test {
+    display: grid;
+    grid-template-columns: 27% 73%;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "header main";
+  }
 
+  
 
   .sticky-top {
-    width: 26.5%;
+    
     height: 95vh;
+/*      */
+    width: 27%;
     min-width: 362px;
-    max-width: 428px;
+    max-width: 432px;
     position: fixed;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: none;
+    grid-area: header;
+    box-sizing: border-box;
   }
 
   #main-large {
-    width: 72%;
-    max-width: 72%;
+    width: 100%;
+    max-width: 1200px;
+    
+    position: relative; 
+    border-right: 2.5rem solid;
+    padding: 0 .5rem;
 
-    position: relative;
-    left: 28%;
-    z-index: 3;
+    grid-area: main;
   }
 
   .p-2 {
-    padding-left: 0rem!important;
-   
+    padding: 0rem !important;
   }
-
-  
 
   h1 {
     width: 100%;
@@ -132,20 +191,20 @@ footer {
     position: fixed;
     height: 5vh;
     bottom: 0;
-    
-    width: 26.5%;
+    width: 27%;
     min-width: 362px;
+    max-width: 432px;
 
-    max-width: 428px;
     z-index: 3;
     background-color: #0d0d0d;
+    padding-bottom: 0.5rem;
+    grid-area: header;
   }
 
   nav ul {
     flex-direction: column;
     align-items: center;
     position: fixed;
-
     top: 35%;
     font-size: 1.9rem;
     font-weight: 200;
@@ -153,12 +212,12 @@ footer {
 
   a {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-weight: 200;
   }
 
   a:hover {
-    color: #BFBFBF;
+    color: #bfbfbf;
     font-size: 2.1rem;
   }
 
@@ -166,20 +225,20 @@ footer {
     padding: 20px;
   }
 
-  .contact-text {
-    padding: 40px;
-    
+  #music {
+    display: flex;
   }
 
-  .contact-text p {
-    width: 80%;
-    border-right: .5rem solid ;
-    
+  .contact-text {
+    padding: 40px;
+    width: 70%;
   }
+
+
+
   h2,
   h3,
   h4 {
-    
     text-align: left;
   }
 
@@ -188,47 +247,63 @@ footer {
   }
 
   #about {
-    background-color: #F2F2F2;
+    background-color: #f2f2f2;
   }
 
   .contact-text {
-    background-color: #F2F2F2;
-
-
+    background-color: #f2f2f2;
   }
 
-  .shadow-sm {
-    box-shadow: none;
-  }
 
-  
 }
 
 @media (max-width: 364px) {
-  a {font-size: .9rem;}
+  a {
+    font-size: 0.9rem;
+  }
 }
 
 @media (max-width: 345px) {
-  h1 {font-size: 3.2rem;}
-  a {font-size: .85rem;}
+  h1 {
+    font-size: 3.2rem;
+  }
+  a {
+    font-size: 0.85rem;
+  }
 }
 
 @media (max-width: 331px) {
-  h1 {font-size: 3.1rem;}
-  a {font-size: .80rem;}
+  h1 {
+    font-size: 3.1rem;
+  }
+  a {
+    font-size: 0.8rem;
+  }
 }
 
 @media (max-width: 320px) {
-  h1 {font-size: 3rem;}
-  a {font-size: .75rem;}
+  h1 {
+    font-size: 3rem;
+  }
+  a {
+    font-size: 0.75rem;
+  }
 }
 
 @media (max-width: 309px) {
-  h1 {font-size: 2.7rem;}
-  a {font-size: .65rem;}
+  h1 {
+    font-size: 2.7rem;
+  }
+  a {
+    font-size: 0.65rem;
+  }
 }
 
 @media (max-width: 287px) {
-  h1 {font-size: 2.6rem;}
-  a {font-size: .6rem;}
+  h1 {
+    font-size: 2.6rem;
+  }
+  a {
+    font-size: 0.6rem;
+  }
 }
