--- a/style.css
+++ b/style.css
@@ -24,11 +24,12 @@ p {
 }
 
 h1 {
-  font-size: 2.7rem;
+  font-size: 2.8rem;
   font-weight: 200;
   text-align: center;
   margin-bottom: 0rem;
   color: #bfbfbf;
+  padding-top: .5rem;
 }
 
 h2,
