--- a/style.css
+++ b/style.css
@@ -23,12 +23,14 @@ p {
   color: black;
 }
 
-h1 {
+.logo {
   font-size: 3rem;
   font-weight: 200;
   text-align: center;
   margin-bottom: 0rem;
   color: #bfbfbf;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 h2,
@@ -53,7 +55,7 @@ a:hover {
 
 footer {
   text-align: center;
-  color: #404040;
+  color: #8c8c8c;
   padding-top: 10px;
 }
 
@@ -171,13 +173,12 @@ h4, h5, h6 {
 ////////////////////////////////////////////////////////////////
 */
 
-@media (min-width: 1360px) {
+@media (min-width: 1024px) {
   #container {
     width: 100%;
-    max-width: 1600px!important;;
     margin: auto;
     display: grid !important;
-    grid-template-columns: 27% auto;
+    grid-template-columns: 362px auto;
     grid-template-rows: auto;
     grid-template-areas: 
     "header main";
@@ -187,28 +188,16 @@ h4, h5, h6 {
     
   }
 
-  test {
-    display: grid;
-    grid-template-columns: 27% 73%;
-    grid-template-rows: auto;
-    grid-template-areas: 
-    "header main";
-  }
-
-  
-
   .sticky-top {
     
     height: 95vh;
-/*      */
-    width: 27%;
-    min-width: 362px;
-    max-width: 432px;
+/*     */
+    width: 362px;
     position: fixed;
     text-align: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
     box-shadow: none;
     grid-area: header;
     box-sizing: border-box;
@@ -216,7 +205,7 @@ h4, h5, h6 {
 
   #main-large {
     width: 100%;
-    max-width: 1200px;
+    
     
     position: relative; 
     border-right: 2.5rem solid;
@@ -239,9 +228,7 @@ h4, h5, h6 {
     position: fixed;
     height: 5vh;
     bottom: 0;
-    width: 27%;
-    min-width: 362px;
-    max-width: 432px;
+    width: 362px;
 
     z-index: 3;
     background-color: #0d0d0d;
@@ -308,12 +295,36 @@ h4, h5, h6 {
 
 }
 
+@media (min-width: 701px) {
+  .spotify {
+    width: 300px;
+    
+    
+  }
+
+  .m-wrapper {
+    width: 100%;
+  }
+
+  .contact-text {
+    width: fit-content;
+  }
+
+}
+
+
 @media (max-width: 700px) {
   .music {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+
+  .m-wrapper {
+    width: 100%;
+  }
+
+  
 
   .spotify {
     width: 100%;
@@ -323,10 +334,10 @@ h4, h5, h6 {
   }
   .player {
     order: 3;
-    width: 90%;
-    height: 88px;
+    width: 100%;
+    height: 87px;
     max-width: 500px;
-    min-width: 244px;
+    
     
   }
 
@@ -335,6 +346,16 @@ h4, h5, h6 {
     border: none;
     padding-bottom: 0;
   }
+}
+
+@media (max-width: 370px) {
+  a {
+    font-size: 0.9rem;
+  }
+  h1 {
+    font-size: 3rem;
+  }
+  
 }
 
 @media (max-width: 364px) {
@@ -372,7 +393,7 @@ h4, h5, h6 {
 
 @media (max-width: 309px) {
   h1 {
-    font-size: 2.6rem;
+    font-size: 2.5rem;
   }
   a {
     font-size: 0.65rem;
