--- a/style.css
+++ b/style.css
@@ -86,14 +86,17 @@ footer {
    ;
 }
 
+.m-wrapper {
+  width: 100%;
+}
+
 .spotify {
   background-color: #f2f2f2;
   padding: 1rem;
-  width: 50%;
-  min-height: 20rem;
+  width: 100%;
+  
   border-bottom: .5rem solid #0d0d0d;
-  max-width: 304px;
-  min-width: 244px;
+ 
 }
 
 
@@ -297,13 +300,16 @@ h4, h5, h6 {
 
 @media (min-width: 701px) {
   .spotify {
-    width: 300px;
+    min-width: 300px;
+    max-width: 300px;
     
     
   }
 
   .m-wrapper {
     width: 100%;
+    display: flex;
+    flex-direction: row!important;
   }
 
   .contact-text {
@@ -314,29 +320,22 @@ h4, h5, h6 {
 
 
 @media (max-width: 700px) {
-  .music {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
 
-  .m-wrapper {
-    width: 100%;
-  }
 
-  
+
+
+
 
   .spotify {
     width: 100%;
-    max-width: 700px;
     min-height: fit-content;
     align-items: center;
   }
   .player {
-    order: 3;
+    
     width: 100%;
     height: 87px;
-    max-width: 500px;
+    
     
     
   }
@@ -348,12 +347,36 @@ h4, h5, h6 {
   }
 }
 
-@media (max-width: 370px) {
+@media (max-width: 1023px) {
+  h1 {
+    font-size: 3.3rem;
+  }
+
+  a {
+    font-size: 1rem;
+  }
+
+}
+
+@media (max-width: 400px) {
+  h1 {
+    font-size: 3.2rem;
+  }
+
   a {
     font-size: 0.9rem;
   }
+
+}
+
+@media (max-width: 370px) {
+
   h1 {
     font-size: 3rem;
+  }
+
+  a {
+    font-size: 0.9rem;
   }
   
 }
@@ -393,7 +416,7 @@ h4, h5, h6 {
 
 @media (max-width: 309px) {
   h1 {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
   a {
     font-size: 0.65rem;
@@ -402,7 +425,7 @@ h4, h5, h6 {
 
 @media (max-width: 287px) {
   h1 {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
   a {
     font-size: 0.6rem;
@@ -411,7 +434,7 @@ h4, h5, h6 {
 
 @media (max-width: 270px) {
   h1 {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
   }
 
 }
