--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ footer {
 
 .m-wrapper {
   width: 100%;
+  border-bottom: 0.5rem solid #0d0d0d;
 }
 
 .spotify {
@@ -93,7 +94,7 @@ footer {
   padding: 1rem;
   width: 100%;
 
-  border-bottom: 0.5rem solid #0d0d0d;
+  
 }
 
 .schedule-header {
@@ -137,7 +138,6 @@ h6 {
 .contact-text {
   padding: 20px;
   background-color: #f2f2f2;
-  border-bottom: 0.5rem solid #0d0d0d;
   width: 50%;
 }
 
@@ -263,25 +263,25 @@ h6 {
     min-width: 200px;
   }
 
-  #about {
-    background-color: #f2f2f2;
-  }
 
-  .contact-text {
-    background-color: #f2f2f2;
-  }
+
+
 }
 
 @media (min-width: 701px) {
   .spotify {
     min-width: 300px;
     max-width: 300px;
+    max-height: 400px;
   }
 
   .m-wrapper {
     width: 100%;
     display: flex;
     flex-direction: row !important;
+    background-color: #f2f2f2;
+    border-bottom: .5rem solid #0d0d0d;
+
   }
 
   .contact-text {
