--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ p {
   color: #bfbfbf;
   padding-left: 0;
   padding-right: 0;
-  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+
 
 }
 
