--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ p {
   color: #bfbfbf;
   padding-left: 0;
   padding-right: 0;
-  -webkit-text-size-adjust: none;
+  -webkit-text-size-adjust: 100%;
 
 
 }
