--- a/style.css
+++ b/style.css
@@ -33,8 +33,6 @@ p {
   color: #bfbfbf;
   padding-left: 0;
   padding-right: 0;
-
-
 }
 
 h2,
@@ -160,6 +158,5 @@ h6 {
 }
 
 .p-2 {
-  padding-top: 0rem !important;
-  padding-bottom: 0rem !important;
+  padding: 0rem !important;
 }
