--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ footer {
 .tour {
   width: 100%;
   text-align: center;
-  background-color: #f2f2f2;
+  background-color: #404040;
   padding: 20px;
 
 }
@@ -95,10 +95,10 @@ footer {
 .m-wrapper {
   width: 100%;
   border-bottom: 0.5rem solid #0d0d0d;
+  background-color: #BFBFBF;
 }
 
 .spotify {
-  background-color: #f2f2f2;
   padding: 1rem;
   width: 100%;
 
@@ -106,10 +106,10 @@ footer {
 }
 
 .schedule-header {
-  grid-area: header;
+ 
   padding: 1rem;
   text-align: left;
-  background-color: #bfbfbf;
+  background-color: #f2f2f2;
   align-self: center;
 }
 
@@ -145,7 +145,6 @@ h6 {
 
 .contact-text {
   padding: 20px;
-  background-color: #f2f2f2;
   width: 50%;
 }
 
