--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 html {
   scroll-behavior: smooth;
   -webkit-text-size-adjust: 100%;
-
 }
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: normal;
-  background-color: white;
+  background-color: #f2f2f2;
   color: #0d0d0d;
 }
 
@@ -79,13 +78,11 @@ footer {
 .tour {
   width: 100%;
   text-align: center;
-  background-color: #404040;
+  background-color: #955E42;
   padding: 20px;
-
 }
 
 .schedule {
-
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -95,21 +92,18 @@ footer {
 .m-wrapper {
   width: 100%;
   border-bottom: 0.5rem solid #0d0d0d;
-  background-color: #BFBFBF;
+  background-color: #f2f2f2;
 }
 
 .spotify {
   padding: 1rem;
   width: 100%;
-
-  
 }
 
 .schedule-header {
- 
   padding: 1rem;
   text-align: left;
-  background-color: #f2f2f2;
+  
   align-self: center;
 }
 
@@ -123,7 +117,7 @@ h6 {
 .gig1 h4,
 h5,
 h6 {
-  background-color: white;
+  background-color: #f2f2f2;
   display: inline;
   padding-left: 0.3rem;
   padding-right: 0.3rem;
@@ -134,7 +128,7 @@ h6 {
 .gig {
   min-width: 250px;
   max-width: 350px;
-  padding-bottom: .8rem;
+  padding-bottom: 0.8rem;
 }
 
 .schedule img {
