--- a/style-large.css
+++ b/style-large.css
@@ -7,7 +7,7 @@
     grid-template-rows: auto;
     grid-template-areas: "header main";
     justify-content: space-evenly;
-    background-color: #bfbfbf;
+    background-color: #BFBFBF;
   }
 
   .sticky-top {
@@ -94,13 +94,4 @@
   h4 {
     text-align: left;
   }
-
-  .img-small {
-    display: block;
-    min-width: 200px;
-  }
-
-
-
-
 }
