--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ footer {
 .tour {
   width: 100%;
   text-align: center;
-  background-color: #955E42;
+  background-color: #B24C63;
   padding: 20px;
 }
 
