--- a/style-large.css
+++ b/style-large.css
@@ -7,7 +7,7 @@
     grid-template-rows: auto;
     grid-template-areas: "header main";
     justify-content: space-evenly;
-    background-color: #BFBFBF;
+    background-color: #bfbfbf;
   }
 
   .sticky-top {
@@ -28,7 +28,7 @@
     width: 100%;
 
     position: relative;
-    border-right: 2.5rem solid #0d0d0d;
+    border-right: 3.5rem solid #0d0d0d;
     padding: 0 0.5rem;
 
     grid-area: main;
@@ -94,10 +94,4 @@
   h4 {
     text-align: left;
   }
-
-
-
-  
-
-
 }
