--- a/style-large.css
+++ b/style-large.css
@@ -15,6 +15,7 @@
     /*     */
     width: 380px;
     position: fixed;
+    z-index: 2;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -46,13 +47,13 @@
 
   footer {
     position: fixed;
-    height: 5vh;
+    height: fit-content;
     bottom: 0;
     width: 380px;
 
     z-index: 3;
     background-color: #0d0d0d;
-    padding-bottom: 0.5rem;
+    
     grid-area: header;
   }
 
