--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ footer {
   text-align: center;
   color: #8c8c8c;
   padding-top: 1rem;
-  padding-bottom: .7rem;
+  padding-bottom: 1rem;
 }
 
 .main img {
