--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   max-width: 100vw;
   color: #0a0a0a;
   background-color: #f3f5f6;
-  min-height: 95vh;
+  min-height: 100vh;
   
 }
 
@@ -282,7 +282,7 @@ p {
   background-color: #FADCDB;
   min-height: 3vw;
   margin-top: 4vw;
-  padding: 1vw 1vw 1vw 2vw;
+  padding: 2vw;
   box-shadow: #F8CBC9 0vw .4vw .8vw 0vw inset;
   border-radius: .4rem;
   color: #3D3D3D;
