--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   
   max-width: 100vw;
   color: #0a0a0a;
-  background-color: #f3f5f6;
+  background-color: #F8F1F1;
   min-height: 100vh;
   
 }
@@ -25,7 +25,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 8vw;
+  height: 10vw;
+  background-color: #f3f5f6;
 }
 
 main {
@@ -34,6 +35,11 @@ main {
   
   
   
+}
+
+.main-container {
+  background-color: #f3f5f6;
+  padding-bottom: 10vw;
 }
 
 footer {
@@ -133,7 +139,7 @@ p {
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 200;
-  font-size: 4vw;
+  font-size: 6.1vw;
   color: #292929;
 }
 
@@ -149,7 +155,7 @@ p {
 }
 
 #menu img {
-  width: 4vw;
+  width: 6vw;
   
 }
 
@@ -199,14 +205,14 @@ p {
 #alarm-list-container {
   min-height: 100%;
   width: 100%;
-  max-width: 900px;
+  max-width: 1200px;
   margin: 6vw auto 0;
   
   padding: 4vw  4vw 8vw;
 }
 
 #alarm-list-container h3 {
-  font-size: 4vw;
+  font-size: 5vw;
 }
 
 .alarm-list-header {
@@ -229,7 +235,7 @@ p {
 }
 
 #exit-alarm-button img {
-  width: 5vw;
+  width: 7vw;
   
 }
 
@@ -304,7 +310,7 @@ p {
 }
 
 .alarm-list-item-inactive {
-  opacity: 75%;
+  opacity: 60%;
 }
 
 .alarm-list-item-inactive h5 {
@@ -356,7 +362,7 @@ p {
 }
 
 .alarm-button:last-child img {
-  width: 5vw;
-  height: 5vw;
+  width: 6vw;
+  height: 6vw;
   
 }
