--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ main {
 .main-container {
   background-color: #f3f5f6;
   padding-bottom: 10vw;
+  height: 55vw;
+
 }
 
 footer {
@@ -139,7 +141,7 @@ p {
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 200;
-  font-size: 6.1vw;
+  font-size: 5.1vw;
   color: #292929;
 }
 
