--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ header {
   align-items: center;
   height: 10vw;
   background-color: #f3f5f6;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.header-container {
+  width: 33.3%
 }
 
 main {
@@ -114,23 +119,25 @@ input:focus {
 .clock-container span {
   font-size: 25vw;
   position: relative;
-  bottom: 3vw;
+  top: 2.5vw;
   color: #141414;
 }
 
-p {
+.alarm-header {
   z-index: 100;
   position: relative;
   padding: 0.2vw 0.7vw 0vw;
   margin: 0 auto;
-  bottom: 4vw;
+  bottom: 1.7vw;
   font-weight: 400;
   font-family: Arial, Helvetica, sans-serif;
   color: #292929;
   background-color: white;
   width: fit-content;
   height: fit-content;
-  font-size: 5vw;
+  font-size: 4vw;
+  -webkit-box-shadow: #d7ead7 0px 0.05vw 0.02vw 0px;
+  box-shadow: #d7ead7 0px 0.05vw 0.02vw 0px;
 }
 
 .clock-container div {
@@ -138,14 +145,22 @@ p {
 }
 
 #logo {
-  display: inline-block;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   margin-left: 2.3vw;
   padding: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 200;
   font-size: 5.1vw;
   color: #292929;
+  float: left;
+}
+
+#date {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 3vw;
+  font-weight: 200;
+  padding-top: .2vw;
+
 }
 
 #menu {
@@ -158,6 +173,7 @@ p {
   opacity: 60%;
   transition: 0.3s;
   transform: scale(0.1);
+  float: right;
 }
 
 #menu img {
@@ -181,12 +197,13 @@ p {
 #alarm-container {
   width: 100%;
   height: 100%;
-  background-color: #f8f1f1;
+  background-color: #E4F1E4;
   max-height: 35vw;
   min-height: 35vw;
   display: none;
-  box-shadow: #f1e4e4 inset 0 0 5vw;
+  box-shadow: #d7ead7 inset 0 0 5vw;
   transition: 0.3s ease-in;
+  padding-top: 0vw 2vw 0vw;
 }
 
 .input-container {
@@ -229,7 +246,7 @@ p {
 #alarm-hour {
  display: none;
  transform: scale(1.07);
- transition: 0.2s;
+ transition: 0.7s;
  color: #3D3D3D;
  margin-right: 2vw;
 }
@@ -237,7 +254,7 @@ p {
 #alarm-min {
   display: none;
   transform: scale(1.07);
-  transition: 0.2s;
+  transition: 0.7s;
   color: #3D3D3D;
   margin-left: 2vw;
 }
@@ -286,6 +303,7 @@ p {
   transition: 0.3s;
   display: none;
   padding-top: 0.5vw;
+  float: right;
 }
 
 #exit-alarm-button img {
