--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ footer {
   background-color: #f3f5f6 !important;
   width: 100%;
   z-index: 100;
-  height: 8vw;
+  height: 10vw;
   display: flex;
   flex-direction: column;
   padding-top: 2vw;
@@ -157,7 +157,7 @@ input:focus {
 
 #date {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 3vw;
+  font-size: 3.5vw;
   font-weight: 200;
   padding-top: .2vw;
 
@@ -269,6 +269,7 @@ input:focus {
   display: none;
 
   padding-top: 4vw;
+  overflow: scroll;
 
   
   
