--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 html {
   background-color: white;
   max-height: fit-content;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -16,7 +17,11 @@ body {
   color: #0a0a0a;
   background-color: #f8f1f1;
   margin: 0 auto;
-}
+  scroll-behavior: smooth;
+  
+} 
+
+
 
 /*body::-webkit-scrollbar {
   display: none;
@@ -212,7 +217,9 @@ input:focus {
   color: #3D3D3D;
   padding-top: 2vw;
   margin-right: 2vw;
-  margin-left: 2vw;
+  margin-left: 4vw;
+  width: 35vw;
+  text-align: right;
   
  }
  
@@ -223,7 +230,9 @@ input:focus {
    color: #3D3D3D;
    padding-top: 2vw;
    margin-left: 2vw;
-   margin-right: 2vw;
+   margin-right: 4vw;
+   width: 35vw;
+   text-align: left;
 
  }
 
@@ -236,7 +245,7 @@ input:focus {
   color: #3D3D3D;
   align-self: center;
   height: 100%;
-  height: 30vw;
+  height: 35vw;
   padding: 3vw 0vw;
   
 }
@@ -245,12 +254,23 @@ input:focus {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 4vw;
+  margin-top: 3vw;
   transition: 0.3s;
+  
   
 }
 
-.button-container img {
+.left {
+  position: relative;
+  left: 7vw;
+}
+
+.right {
+  position: relative;
+  right: 7vw;
+}
+
+.arrow {
   width: 2.5vw;
   transition: 0.5s;
   margin: 1vw 1vw;
@@ -258,8 +278,9 @@ input:focus {
 }
 
 .input-list {
-  height: 24vw;
+  height: 26vw;
   overflow: scroll;
+  
   list-style: none;
   margin-left: 1vw;
   margin-right: 1vw;
@@ -278,7 +299,8 @@ input:focus {
 .alarm-option {
   transition: 0.2s;
   color: #666666;
-  height: 100%;
+  height: 26vw;
+  width: 35vw;
   
   
   
@@ -293,7 +315,14 @@ input:focus {
   outline: none;
 }
 
+.hour-option {
+  text-align: right;
 
+}
+
+.min-option{
+  text-align: left;
+}
 
 
 
@@ -375,8 +404,8 @@ input:focus {
   margin-right: 10vw;
   padding: 0;
   position: relative;
-  left: 48vw;
-  bottom: 5vw;
+  left: 47vw;
+  bottom: 10vw;
 
   border: none;
   opacity: 50%;
