--- a/style-desktop.css
+++ b/style-desktop.css
@@ -9,7 +9,6 @@
 html {
   background-color: white;
   max-height: fit-content;
-  
 }
 
 body {
@@ -20,10 +19,7 @@ body {
   background-color: #f8f1f1;
   margin: 0 auto;
   scroll-behavior: smooth;
-  
-} 
-
-
+}
 
 /*body::-webkit-scrollbar {
   display: none;
@@ -39,7 +35,7 @@ header {
 }
 
 .header-container {
-  width: 33.3%
+  width: 33.3%;
 }
 
 main {
@@ -49,12 +45,9 @@ main {
 
 #main-container {
   background-color: #f3f5f6;
-  
-  
 }
 
 footer {
-  
   background-color: #f3f5f6 !important;
   width: 100%;
   z-index: 100;
@@ -79,9 +72,6 @@ address {
   justify-content: center;
 }
 
-
-
-
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: #ead7d7;
@@ -93,21 +83,19 @@ address {
   width: 100%;
   max-width: 100vw;
 
-  background-color: #E2EBF3;
+  background-color: #e2ebf3;
   margin: 0 auto;
-  
-  -webkit-box-shadow: #D4E2ED 0px 0.05vw 0.02vw 0px;
-  box-shadow: #D4E2ED 0px 0.05vw 0.02vw 0px;
+
+  -webkit-box-shadow: #d4e2ed 0px 0.05vw 0.02vw 0px;
+  box-shadow: #d4e2ed 0px 0.05vw 0.02vw 0px;
   transition: all 0.1s linear;
   height: 14rem;
   font-size: 10rem;
-  
+
   color: #1f1f1f;
   display: flex;
   align-items: center;
   justify-content: center;
-  
-
 }
 
 #hour {
@@ -121,9 +109,6 @@ address {
 #time-divider {
   padding-bottom: 1.5rem;
 }
-
-
-
 
 .clock-container div {
   display: flex;
@@ -144,8 +129,7 @@ address {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 2rem;
   font-weight: 200;
-  color: #0A0A0A;
-
+  color: #0a0a0a;
 }
 
 #menu {
@@ -185,7 +169,7 @@ address {
   display: none;
   box-shadow: #d7ead7 inset 0 0 5vw;
   transition: 0.3s ease-in;
-  padding: 2rem;
+
 
   justify-content: center;
   align-items: center;
@@ -198,23 +182,21 @@ address {
   transform: scale(1.07);
   transition: 0.7s;
   color: #3d3d3d;
-  
+
   margin-left: 1rem;
   margin-right: 1rem;
   text-align: right;
-  
- }
- 
- #alarm-min {
-   display: none;
-   transform: scale(1.05);
-   transition: 0.7s;
-   color: #3D3D3D;
-   margin-left: 1rem;
-  margin-right: 1rem;
-   text-align: left;
+}
 
- }
+#alarm-min {
+  display: none;
+  transform: scale(1.05);
+  transition: 0.7s;
+  color: #3d3d3d;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  text-align: left;
+}
 
 .input-container {
   font: 400 10rem Roboto;
@@ -224,8 +206,10 @@ address {
   transition: 0.1s linear;
   color: #3d3d3d;
   align-self: center;
-  height: 100%;
+  height: 14rem;
+  padding: 2rem 0rem;
   
+
 }
 
 .button-container {
@@ -234,8 +218,6 @@ address {
   justify-content: space-between;
   margin: 0 1rem;
   transition: 0.3s;
-  
-  
 }
 
 .left {
@@ -256,33 +238,33 @@ address {
 }
 
 .input-list {
-  height: 13rem;
+  height: 100%;
   overflow: scroll;
   
+
   list-style: none;
   margin-left: 1rem;
   margin-right: 1rem;
   
-  
-  
 }
-
 
 .input-list::-webkit-scrollbar {
   display: none;
 }
 
-
-
 .alarm-option {
   transition: 0.2s;
   color: #666666;
   height: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.5rem;
+  
 }
 
-.alarm-option:hover {  
-  color: #3D3D3D;
-  transform: scale(1.03);
+.alarm-option:hover {
+  color: #3d3d3d;
+ 
 }
 
 .alarm-option:focus {
@@ -291,15 +273,11 @@ address {
 
 .hour-option {
   text-align: right;
-
 }
 
-.min-option{
+.min-option {
   text-align: left;
 }
-
-
-
 
 .alarm-container {
   background-color: #f8f1f1;
@@ -311,14 +289,9 @@ address {
   min-height: 60vh;
 
   padding: 2rem;
-  
-
-  
-  
 }
 
 #alarm-list-container {
-  
   width: 100%;
   max-width: 1000px;
   margin: 0 auto 0;
@@ -336,7 +309,7 @@ address {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 200;
   padding-bottom: 1rem;
-  color: #0A0A0A;
+  color: #0a0a0a;
   overflow: hidden;
 }
 
@@ -355,7 +328,7 @@ address {
   opacity: 60%;
   transition: 0.3s;
   display: none;
-  
+
   float: right;
 }
 
@@ -376,16 +349,15 @@ address {
   display: none;
   background-color: transparent;
   margin-left: auto;
-  
+
   padding: 0;
   position: relative;
-  bottom: 9rem;
-  left: 18rem;
+  bottom: 11rem;
+  left: 17rem;
 
   border: none;
   opacity: 50%;
   transition: 0.3s;
-
 }
 
 #save-alarm-button img {
@@ -416,24 +388,17 @@ address {
   background-color: #fadcdb;
   box-shadow: #f8cbc9 0vw 0.4vw 0.8vw 0vw inset;
   transform: scale(0.1);
-  
 }
 
-.alarm-list-item:nth-child(3n+2) {
-  background-color: #FFF3D6;
-  box-shadow: #FFEDC2 0vw 0.4vw 0.8vw 0vw inset;
-
+.alarm-list-item:nth-child(3n + 2) {
+  background-color: #fff3d6;
+  box-shadow: #ffedc2 0vw 0.4vw 0.8vw 0vw inset;
 }
 
-.alarm-list-item:nth-child(3n+3) {
-  background-color: #E4F1E4;
+.alarm-list-item:nth-child(3n + 3) {
+  background-color: #e4f1e4;
   box-shadow: #d7ead7 0vw 0.4vw 0.8vw 0vw inset;
-  
 }
-
-
-
-
 
 .alarm-list-item h5 {
   font-size: 3rem;
@@ -498,3 +463,17 @@ address {
   height: 3rem;
 }
 
+@media screen and (max-width: 700px) {
+  #logo {
+    font-weight: 200;
+    font-size: 2rem;
+  }
+
+  #date {
+    font-size: 1.5rem;
+  }
+
+  #menu img {
+    width: 2rem;
+  }
+}
