--- a/style.css
+++ b/style.css
@@ -18,10 +18,7 @@ body {
   background-color: #f8f1f1;
   margin: 0 auto;
   scroll-behavior: smooth;
-  
-} 
-
-
+}
 
 /*body::-webkit-scrollbar {
   display: none;
@@ -37,7 +34,7 @@ header {
 }
 
 .header-container {
-  width: 33.3%
+  width: 33.3%;
 }
 
 main {
@@ -47,9 +44,8 @@ main {
 
 #main-container {
   background-color: #f3f5f6;
-  
+
   min-height: 48vw;
-  
 }
 
 footer {
@@ -108,25 +104,23 @@ input:focus {
   width: 100%;
   max-width: 100vw;
 
-  background-color: #E2EBF3;
+  background-color: #e2ebf3;
   margin: 0 auto;
-  
-  -webkit-box-shadow: #D4E2ED 0px 0.05vw 0.02vw 0px;
-  box-shadow: #D4E2ED 0px 0.05vw 0.02vw 0px;
+
+  -webkit-box-shadow: #d4e2ed 0px 0.05vw 0.02vw 0px;
+  box-shadow: #d4e2ed 0px 0.05vw 0.02vw 0px;
   transition: all 0.1s linear;
   max-height: 35vw;
   min-height: 35vw;
   font-size: 25vw;
-  
+
   color: #1f1f1f;
   display: flex;
   align-items: center;
   justify-content: center;
-  
-
 }
 
-#hour{
+#hour {
   margin-right: 1vw;
 }
 
@@ -137,9 +131,6 @@ input:focus {
 #time-divider {
   padding-bottom: 3vw;
 }
-
-
-
 
 .clock-container div {
   display: flex;
@@ -157,12 +148,11 @@ input:focus {
 }
 
 #date {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 4vw;
   font-weight: 200;
-  padding-top: .2vw;
-  color: #0A0A0A;
-
+  padding-top: 0.2vw;
+  color: #0a0a0a;
 }
 
 #menu {
@@ -199,47 +189,39 @@ input:focus {
 #alarm-container {
   width: 100%;
   height: 100%;
-  background-color: #E4F1E4;
+  background-color: #e4f1e4;
   max-height: 35vw;
   min-height: 35vw;
   display: none;
   box-shadow: #d7ead7 inset 0 0 5vw;
   transition: 0.3s ease-in;
- 
+
   justify-content: center;
-  align-items: flex-start;
 }
 
 #alarm-hour {
   display: none;
 
   transition: 0.7s;
-  color: #3D3D3D;
-  display: flex;
-  flex-direction: column;
-  margin-left: 1vw;
-  margin-right: 1vw;
-  
-  justify-content: center;
-  width: 35vw;
-  text-align: right;
-  
- }
- 
- #alarm-min {
-   display: none;
-   transition: 0.7s;
-   color: #3D3D3D;
-   display: flex;
-   flex-direction: column;
-   margin-left: 1vw;
-   margin-right: 1vw;
-   
-   justify-content: center;
-   width: 35vw;
-   text-align: left;
+  color: #3d3d3d;
 
- }
+  
+  margin-right: 2vw;
+
+  width: 40vw;
+  text-align: right;
+}
+
+#alarm-min {
+  display: none;
+  transition: 0.7s;
+  color: #3d3d3d;
+
+  width: 40vw;
+  text-align: left;
+  margin-left: 2vw;
+  
+}
 
 .input-container {
   font: 400 24vw Roboto;
@@ -247,12 +229,11 @@ input:focus {
   justify-content: center;
   align-items: center;
   transition: 0.1s linear;
-  color: #3D3D3D;
+  color: #3d3d3d;
   align-self: center;
   height: 100%;
   height: 35vw;
   padding: 3vw 0vw;
-  
 }
 
 .button-container {
@@ -261,8 +242,6 @@ input:focus {
   justify-content: space-between;
   margin-top: 3vw;
   transition: 0.3s;
-  
-  
 }
 
 .left {
@@ -285,43 +264,27 @@ input:focus {
 .input-list {
   height: 26vw;
   overflow: scroll;
-  
+  min-width: 40vw;
   list-style: none;
-  margin-left: 1vw;
-  margin-right: 1vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  
-  
-  
 }
-
 
 .input-list::-webkit-scrollbar {
   display: none;
 }
 
-
+#hour-list {
+  margin-left: 2vw;
+}
+#min-list {
+  margin-right: 2vw;
+}
 
 .alarm-option {
   color: #666666;
   height: 26vw;
-  width: 35vw;
-  display: flex;
-  flex-direction: column;
-  
-  justify-content: center;
-  
-  
-  
-  
-  
-  
 }
 
-.alarm-option:hover {  
+.alarm-option:hover {
   height: 26vw;
   width: 35vw;
 }
@@ -334,36 +297,34 @@ input:focus {
 
 .hour-option {
   text-align: right;
+  display: flex;
+  flex-direction: column;
 
+  justify-content: center;
+  margin-right: 2vw;
 }
 
-.min-option{
+.min-option {
   text-align: left;
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  margin-left: 2vw;
 }
-
-
-
 
 .alarm-container {
   background-color: #f8f1f1;
   height: 100%;
- 
 
   width: 100%;
-  
+
   margin: 0 auto;
-  
-  
 
   padding: 4vw;
-  
-
-  
-  
 }
 
 #alarm-list-container {
-  
   width: 100%;
   max-width: 1200px;
   margin: 0 auto 0;
@@ -381,7 +342,7 @@ input:focus {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 200;
   padding-bottom: 2vw;
-  color: #0A0A0A;
+  color: #0a0a0a;
   overflow: hidden;
 }
 
@@ -430,6 +391,7 @@ input:focus {
   border: none;
   opacity: 50%;
   transition: 0.3s;
+  z-index: 500;
 
   padding-top: 0.5vw;
 }
@@ -462,24 +424,17 @@ input:focus {
   background-color: #fadcdb;
   box-shadow: #f8cbc9 0vw 0.4vw 0.8vw 0vw inset;
   transform: scale(0.1);
-  
 }
 
-.alarm-list-item:nth-child(3n+2) {
-  background-color: #FFF3D6;
-  box-shadow: #FFEDC2 0vw 0.4vw 0.8vw 0vw inset;
-
+.alarm-list-item:nth-child(3n + 2) {
+  background-color: #fff3d6;
+  box-shadow: #ffedc2 0vw 0.4vw 0.8vw 0vw inset;
 }
 
-.alarm-list-item:nth-child(3n+3) {
-  background-color: #E4F1E4;
+.alarm-list-item:nth-child(3n + 3) {
+  background-color: #e4f1e4;
   box-shadow: #d7ead7 0vw 0.4vw 0.8vw 0vw inset;
-  
 }
-
-
-
-
 
 .alarm-list-item h5 {
   font-size: 6vw;
@@ -544,4 +499,3 @@ input:focus {
   width: 6vw;
   height: 6vw;
 }
-
