--- a/style.css
+++ b/style.css
@@ -247,12 +247,12 @@ input:focus {
 
 .left {
   position: relative;
-  left: 7vw;
+  left: 10vw;
 }
 
 .right {
   position: relative;
-  right: 7vw;
+  right: 10vw;
 }
 
 .arrow {
@@ -294,8 +294,7 @@ input:focus {
 
 .alarm-option:focus {
   outline: none;
-  margin: 0;
-  padding: 0;
+  
 
 }
 
@@ -322,6 +321,7 @@ input:focus {
 .alarm-container {
   background-color: #f8f1f1;
   height: 100%;
+  height: calc(100vh - 48vw - 10vw);
 
   width: 100%;
 
@@ -336,8 +336,10 @@ input:focus {
   margin: 0 auto 0;
   max-height: 63vh;
 
+
   padding: 4vw 4vw 0vw;
   overflow: scroll;
+  height: calc(100vh - 48vw - 10vw);
 }
 
 #alarm-list-container h3 {
@@ -353,8 +355,9 @@ input:focus {
 }
 
 #alarm-list {
-  height: 100%;
+  height: calc(100vh - 80vw);
   overflow: scroll;
+  scroll-behavior: smooth;
 }
 
 #exit-alarm-button {
@@ -429,7 +432,7 @@ input:focus {
   transition: 0.5s;
   background-color: #fadcdb;
   box-shadow: #f8cbc9 0vw 0.4vw 0.8vw 0vw inset;
-  transform: scale(0.1);
+ 
 }
 
 .alarm-list-item:nth-child(3n + 2) {
