--- a/style-desktop.css
+++ b/style-desktop.css
@@ -179,8 +179,8 @@ address {
   width: 100%;
   height: 100%;
   background-color: #e4f1e4;
-  max-height: 35vw;
-  min-height: 35vw;
+ 
+  min-height: calc(100vh - 6vw);
   display: none;
   box-shadow: #d7ead7 inset 0 0 5vw;
   transition: 0.3s ease-in;
