--- a/style-desktop.css
+++ b/style-desktop.css
@@ -36,7 +36,6 @@ header {
   background-color: #f3f5f6;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   transition: 0.5s;
-
 }
 
 .header-container {
@@ -85,8 +84,6 @@ address {
   display: flex;
   justify-content: center;
 }
-
-
 
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -189,8 +186,8 @@ address {
   width: 100%;
   height: 100%;
   background-color: #e4f1e4;
- 
-  min-height: calc(100vh - 6vw);
+
+  height: calc(100vh);
   display: none;
   box-shadow: #d7ead7 inset 0 0 5vw;
   transition: 0.3s ease-in;
@@ -205,7 +202,6 @@ address {
   transition: 0.7s;
   color: #3d3d3d;
 
-  
   margin-right: 2vw;
 
   width: 40vw;
@@ -220,7 +216,6 @@ address {
   width: 40vw;
   text-align: left;
   margin-left: 2vw;
-  
 }
 
 .input-container {
@@ -233,15 +228,14 @@ address {
   align-self: center;
   height: 100%;
   width: 100vw;
-  margin: 0 auto;
-  padding: 3vw 0vw;
+  padding-bottom: 12vh;
 }
 
 .button-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  
+
   transition: 0.3s;
 }
 
@@ -257,7 +251,7 @@ address {
 
 .arrow {
   width: 2.5vw;
-  transition: 0.5s;
+  transition: 0.7s;
   margin: 1vw 1vw;
   opacity: 70%;
 }
@@ -275,7 +269,7 @@ address {
 
 #hour-list {
   margin-left: 2vw;
-  display:block;
+  display: block;
 }
 #min-list {
   margin-right: 2vw;
@@ -285,17 +279,13 @@ address {
 .alarm-option {
   color: #666666;
   width: 100%;
-
 }
 
 .alarm-option:hover {
-
 }
 
 .alarm-option:focus {
   outline: none;
-  
-
 }
 
 .hour-option {
@@ -306,7 +296,6 @@ address {
   
   justify-content: center; */
   padding-right: 2vw;
-
 }
 
 .min-option {
@@ -334,14 +323,11 @@ address {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto 0;
-  
-
 
   padding: 4vw 4vw 0vw;
-  
+
   min-height: calc(100vh - 33vw);
   transition: 0.5s;
-
 }
 
 #alarm-list-container h3 {
@@ -351,7 +337,7 @@ address {
 .alarm-list-header {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 200;
-  padding-bottom: .5vw;
+  padding-bottom: 0.5vw;
   color: #0a0a0a;
   overflow: hidden;
 }
@@ -397,7 +383,7 @@ address {
   padding: 0;
   position: relative;
   left: 47vw;
-  bottom: 10vw;
+  bottom: 15vw;
 
   border: none;
   opacity: 50%;
@@ -434,13 +420,11 @@ address {
   transition: 0.9s;
   background-color: #fadcdb;
   box-shadow: #f8cbc9 0vw 0.4vw 0.8vw 0vw inset;
-
- 
 }
 
 .alarm-list-item:focus {
   outline: none;
-  border:none;
+  border: none;
 }
 
 .alarm-list-item:nth-child(3n + 2) {
