--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ header {
 main {
   max-width: 100vw;
   height: 100%;
+  min-height: 38vw;
+  max-height: 38vw;
 }
 
 #main-container {
@@ -52,6 +54,7 @@ main {
   z-index: 1000;
 
   min-height: 48vw;
+  max-height: 48vw;
 }
 
 footer {
@@ -71,12 +74,12 @@ footer {
 }
 
 footer img {
-  height: 2.5vw;
-  width: 2.5vw;
+  width: 4vw;
+  height: 4vw;
   min-width: 1rem;
   min-height: 1rem;
   opacity: 50%;
-  margin: 0 1.2vw;
+  margin: 0 1.5vw;
 }
 
 address {
@@ -329,6 +332,7 @@ input:focus {
   width: 100%;
 
   margin: 0 auto;
+  z-index: 3000;
 
   padding: 4vw;
 }
@@ -395,17 +399,17 @@ input:focus {
   background-color: transparent;
   margin-left: auto;
   margin-right: 10vw;
-  padding: 0;
+  
   position: relative;
-  left: 47vw;
-  bottom: 10vw;
+  left: 46vw;
+  bottom: 12vw;
 
   border: none;
   opacity: 50%;
   transition: 0.3s;
-  z-index: 500;
+  z-index: 2000;
 
-  padding-top: 0.5vw;
+  padding: 2vw;
 }
 
 #save-alarm-button img {
@@ -428,8 +432,8 @@ input:focus {
   align-items: center;
   min-height: 3vw;
   margin-top: 5vw;
-  padding: 2.8vw 2vw;
-  padding-left: 3vw;
+  padding: 2.8vw 2.5vw;
+  padding-left: 3.5vw;
   border-radius: 0.4rem;
   color: #666666;
   transition: 0.5s;
@@ -473,17 +477,20 @@ input:focus {
 }
 
 .alarm-input {
-  transition: all 0.1s ease;
+  transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 #input-hour {
   text-align: right;
   margin-right: 3vw;
+  cursor: pointer;
 }
 
 #input-min {
   text-align: left;
   margin-left: 3vw;
+  cursor: pointer;
 }
 
 .alarm-button {
