--- a/style-desktop.css
+++ b/style-desktop.css
@@ -422,6 +422,15 @@ address {
   box-shadow: #f8cbc9 0vw 0.4vw 0.8vw 0vw inset;
 }
 
+.alarm-list-item-container {
+  -webkit-box-shadow: 0px 2px 7px -1px #F1E4E4; 
+  box-shadow: 0px 2px 7px -1px #F1E4E4;
+  margin: 4.5vw 4vw 4vw;
+  border-radius: 0.4rem;
+  transition: 0.9s;
+
+}
+
 .alarm-list-item:focus {
   outline: none;
   border: none;
